[project]
name = "hooper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nick Wall", email = "46641379+walln@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
]
virtual = true

[tool.rye.workspace]
members = ["backend"]
