[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nick Wall", email = "46641379+walln@users.noreply.github.com" }
]
dependencies = [
    "modal>=0.62.4",
    "torch>=2.2.1",
    "bitsandbytes>=0.43.0",
    "transformers>=4.39.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
