[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nick Wall", email = "46641379+walln@users.noreply.github.com" }
]
dependencies = [
    "modal>=0.62.4",
    "torch>=2.1.2",
    "bitsandbytes>=0.43.0",
    "transformers>=4.39.1",
    "polars>=0.20.17",
    "langchain>=0.1.13",
    "pydantic>=2.6.4",
    "fastapi>=0.110.0",
    "vllm>=0.3.3",
    "openai>=1.14.3",
    "instructor>=1.0.0",
    "anthropic>=0.21.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.rye.scripts]
functions = { cmd = "python src/backend/functions.py"}
